NEWS
====

Versioning
----------

Releases will be numbered with the following semantic versioning format:

<major>.<minor>.<patch>

And constructed with the following guidelines:

* Breaking backward compatibility bumps the major (and resets the minor
  and patch)
* New additions without breaking backward compatibility bumps the minor
  (and resets the patch)
* Bug fixes and misc changes bumps the patch


lexicon 1.0.1 - 
----------------------------------------------------------------

BUG FIXES

* `hash_lemmas` had the lemma of `as` to be `a`.  This was incorrect (spotted by
  Jonathan Bratt).
  
* `hash_lemmas` had Spaces before 2 tokens (" furtherst", " skilled") meaning.  
  This extra white space has been stripped.

NEW FEATURES

* `profanity_zac_anger` added to provide a longer list of profane words.

MINOR FEATURES

* `available_data` picks up a `regex` argument to search for specific substrings
  and return matching rows.

IMPROVEMENTS

CHANGES

