@@ -1,0 +1,36 @@
+#' Titus Wormer's List of Racist Words
+#'
+#' A dataset containing a character vector of racist words from Titus Wormer.
+#' 
+#' @section License: (The MIT License)
+#' 
+#' Copyright (c) 2014 Titus Wormer <mailto:tituswormer@gmail.com>
+#' 
+#' Permission is hereby granted, free of charge, to any person obtaining
+#' a copy of this software and associated documentation files (the
+#' 'Software'), to deal in the Software without restriction, including
+#' without limitation the rights to use, copy, modify, merge, publish,
+#' distribute, sublicense, and/or sell copies of the Software, and to
+#' permit persons to whom the Software is furnished to do so, subject to
+#' the following conditions:
+#' 
+#' The above copyright notice and this permission notice shall be
+#' included in all copies or substantial portions of the Software.
+#' 
+#' THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
+#' EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+#' MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+#' IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+#' CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+#' TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+#' SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+#' https://raw.githubusercontent.com/words/profanities/master/LICENSE
+#' @docType data
+#' @keywords datasets
+#' @name profanity_racist
+#' @usage data(profanity_racist)
+#' @format A character vector with 470 elements
+#' @references \url{https://github.com/words/profanities}
+NULL
+
+
